--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy City Validation App
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -13,19 +12,19 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-      - name: Setup GitHub Pages
+      - name: Setup Pages
         uses: actions/configure-pages@1f498c54bc36abc5b2fc30773b1d1fa084c0590b
 
-      - name: Upload site files
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@a282f3263004b5b48b9f9139da3b24ec3d5022ed
         with:
-          path: .
+          path: '.'
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@d6db90164ad5cd21c6b22ed7240279930b2067ae
 
