--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,30 +2,31 @@ name: Deploy City Validation App
 
 on:
   push:
-    branches: ["main"]
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+    branches:
+      - master
+  pull_request:
+    branches:
+      - '*'  
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
         with:
-          path: '.'
+          dotnet-version: '8.0.x'
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Run unit tests
+        run: |
+          cd testingProject
+          dotnet test
+
+
         
+
 
