--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,30 +3,32 @@ name: Deploy City Validation App
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - '*'  
+      - main
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
 
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
+      - name: Setup GitHub Pages
+        uses: actions/configure-pages@983d7736d9b0ae728b81ab479565c72886d7745b
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8d3bb3f3b1c7c46
         with:
-          dotnet-version: '8.0.x'
+          path: .
 
-      - name: Run unit tests
-        run: |
-          cd testingProject
-          dotnet test
-
-
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@dfead2a2f9d3b75b69c8e5d4c03a8a57a8d6d6c7
         
+
 
 
