--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy City Validation App
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -12,21 +13,26 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      # Checkout repository using pinned SHA
+      - name: Checkout repository
+        uses: actions/checkout@9e5008c416c7569306cb190cf806c25195f2e290
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+      # Configure GitHub Pages using pinned SHA
+      - name: Setup GitHub Pages
+        uses: actions/configure-pages@6f01a1ef38752f82b01b58a3d2e0f3d2e2f1d61a
 
+      # Upload artifact for deployment using pinned SHA
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@d41f9e58baf0c1c7c2f0d6b3f0a6a4b5d9c1e2f3
         with:
-          path: '.'
+          path: .
 
+      # Deploy to GitHub Pages using pinned SHA
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0
+
 
 
 
