--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,21 +17,21 @@ jobs:
     steps:
       # Checkout repository using pinned SHA
       - name: Checkout repository
-        uses: actions/checkout@9e5008c416c7569306cb190cf806c25195f2e290
+        uses: actions/checkout@95af94c52e9d79d9317e424ff03462ea8f6a6774
 
       # Configure GitHub Pages using pinned SHA
       - name: Setup GitHub Pages
-        uses: actions/configure-pages@6f01a1ef38752f82b01b58a3d2e0f3d2e2f1d61a
+        uses: actions/configure-pages@95af94c52e9d79d9317e424ff03462ea8f6a6774
 
       # Upload artifact for deployment using pinned SHA
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@d41f9e58baf0c1c7c2f0d6b3f0a6a4b5d9c1e2f3
+        uses: actions/upload-pages-artifact@95af94c52e9d79d9317e424ff03462ea8f6a6774
         with:
-          path: .
+          path: ./bin/Release/net8.0/publish
 
       # Deploy to GitHub Pages using pinned SHA
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0
+        uses: actions/deploy-pages@95af94c52e9d79d9317e424ff03462ea8f6a6774
 
 
 
