--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,31 +4,32 @@ on:
   push:
     branches:
       - main
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup GitHub Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
         with:
-          path: ./bin/Release/net8.0/publish
+          dotnet-version: '8'
 
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+      - name: Run unit tests
+        run: dotnet test
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: web-files
+          path: |
+            index.html
+            style.css
+            script.js
 
 
 
